# demo

./: README.md  pyproject.toml  settings.ini
demo/: _modidx.py
nbs/: index.ipynb  nbdev.yml
