[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "jupyterlab>=4.3.4",
    "nbclassic>=1.1.0",
    "nbdev>=2.3.34",
    "notebook>=7.3.2",
    "ruff>=0.8.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
